k8smanifest/api-wallet-deployment+service.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-wallet
  namespace: api
  labels:
    app: api-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-wallet
  template:
    metadata:
      labels:
        app: api-wallet
    spec:
      containers:
        - name: container
          image: peerasilp/api-wallet:latest
          resources: 
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5000

---
#Service Network
apiVersion: v1
kind: Service
metadata:
  name: api-wallet-service 
  namespace: api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: api-wallet
spec:
  type: ClusterIP
  selector:
    app: api-wallet
  ports:
  - port: 443
    targetPort: 5000
    protocol: TCP
